--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.datasource.url=jdbc:h2:mem:spring-graphQl
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.graphql.websocket.connection-init-timeout=60s
+spring.graphql.websocket.path=/graphql
